feat(chart): 添加K线图查看器和集成ta4j技术指标库
- 新增CandlestickChartViewer类，使用JFreeChart实现专业K线图展示
- 集成ta4j库替换原有技术指标计算逻辑，提升计算准确性
- 添加MA、EMA、MACD、RSI、布林带等指标的ta4j实现
- 在Main类中添加K线图显示功能，支持鼠标缩放和平移
- 引入JFreeChart依赖用于图表绘制
- 新增ADX和WMA等高级技术指标支持

--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,26 @@
             <version>2.22.0</version>
         </dependency>
 
+        <!-- Ta4j - 技术分析库 -->
+        <dependency>
+            <groupId>org.ta4j</groupId>
+            <artifactId>ta4j-core</artifactId>
+            <version>0.16</version>
+        </dependency>
+
         <!-- JUnit 5 - 测试 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.10.1</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- JFreeChart - K线图绘制 -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.4</version>
         </dependency>
     </dependencies>
 
